fix: handle overflow issues

--- a/online-zoo/assets/styles/style.css
+++ b/online-zoo/assets/styles/style.css
@@ -27,10 +27,25 @@
     padding: 0;
 }
 
+* {
+    /* outline: 1px solid red; */
+}
+
 html {
     font-family: 'Roboto', sans-serif;
     background: var(--white);
+    position: fixed;
+    height: 100%;
+    overflow: hidden;
+}
+ 
+body {
+    margin: 0;
+    width: 100vw; 
+    height: 100%;
+    overflow-y: auto;
     overflow-x: hidden;
+    -webkit-overflow-scrolling: touch;
 }
 
 a {
@@ -45,7 +60,6 @@ a {
 /* Header */
 .navbar {
     background-color: var(--black);
-    position: absolute;
     width: 100%;
 }
 
@@ -129,6 +143,7 @@ a {
 
 /* Watch your favourite animal section */
 #watch-animal-online {
+    position: relative;
     height: 780px;
     width: 100%;
     background-image: url(../../assets/images/Giant\ Panda.png);
@@ -205,6 +220,11 @@ a {
 }       
 
 /* Hero section */
+
+#hero-header {
+    position: relative;
+}
+
 .hero-container {
     display: flex;
     justify-content: space-between;
@@ -1510,8 +1530,13 @@ input[type=number] {
         display: block;
         width: 231px;
         height: 476px;
-        top: 338px;
-        right: -106px;
+        top: -51px;
+        right: -102px;
+    }
+
+    .hero-right {
+        margin-left: 0px;
+        margin-right: 30px;
     }
 
     .animals-grid {
@@ -1596,6 +1621,9 @@ input[type=number] {
         margin-right: 21px;
     }
 
+    #center-card-icon {
+        position: relative;
+    }
     .arrow-green {
         display: block;
         position: absolute;
@@ -1603,12 +1631,12 @@ input[type=number] {
     }
     .arrow-green-left {
         top: -15px;
-        left: 170px;
+        left: -67px;
     }
 
     .arrow-green-right {
         top: -15px;
-        right: 170px;
+        right: -67px;
     }
 
     .pick-feed-friend-container {
